--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,19 @@
         android:theme="@style/Theme.Smort"
         tools:targetApi="31">
         <activity
+            android:name=".activities.QuizSelectActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.QuizChoosingActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.ResultActivity"
             android:exported="false" />
         <activity
             android:name=".activities.QuizTakingActivity"
             android:exported="false" />
         <activity
-            android:name=".activities.QuizSelectActivity"
+            android:name=".activities.Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
