--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.Smort"
         tools:targetApi="31">
         <activity
+            android:name=".activities.CheckAnswerActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.QuizSelectActivity"
             android:exported="false" />
         <activity
